--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 .main {
-  display: flex;
   background-color: aliceblue;
 }
 
 #timer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: xxx-large;
-  text-align: center;
   color: orange;
 }
