modfiy time font

--- a/style.css
+++ b/style.css
@@ -11,4 +11,5 @@ body {
   background-color: aliceblue;
   color: orange;
   font-size: xxx-large;
+  font-family: "Courier New", Courier, monospace;
 }
