--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   justify-content: center;
   height: 100vh;
   background-color: #ecf8f9;
-  color: #e55807;
+  color: #f24c3d;
   font-size: 10vw;
   font-family: "Courier New", Courier, monospace;
 }
